tests/error/tracing_errors/linear_drop2.py
from guppylang.decorator import guppy
from guppylang.module import GuppyModule
from guppylang.std.builtins import owned
from guppylang.std.quantum import qubit

module = GuppyModule("test")
module.load(qubit)


@guppy.comptime(module)
def test(q: qubit @ owned) -> None:
    pass


module.compile()
